--- a/doc/Concepts/Icons/Library.stories.mdx
+++ b/doc/Concepts/Icons/Library.stories.mdx
@@ -4,10 +4,10 @@ import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 import * as iconComponentList from "@hitachivantara/uikit-react-icons/dist/icons";
 import * as iconPictogramComponentList from "@hitachivantara/uikit-react-icons/dist/pictograms";
 import { MaturityStatus } from "../../../.storybook/blocks/MaturityStatus";
-import componentDefinitions from "../../Introduction/ComponentVersioningTable/versions";
+import componentDefinitions from "../versions";
 
 <Meta
-  title="Concepts/Icons/Library"
+  title="Theming/Icons/Library"
   parameters={{
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
