--- a/doc/Concepts/CssBaseline/CssBaseline.stories.mdx
+++ b/doc/Concepts/CssBaseline/CssBaseline.stories.mdx
@@ -3,7 +3,7 @@ import LinkTo from "@storybook/addon-links/react";
 import { HvAvatar } from "@hitachivantara/uikit-react-core";
 import { Caution } from "@hitachivantara/uikit-react-icons";
 
-<Meta title="Concepts/CSS Baseline" />
+<Meta title="Theming/CSS Baseline" />
 
 # CSS Baseline
 
