--- a/doc/Introduction/GetStarted.stories.mdx
+++ b/doc/Introduction/GetStarted.stories.mdx
@@ -5,6 +5,8 @@ import corePackage from "../../packages/core/package.json";
 import labPackage from "../../packages/lab/package.json";
 import iconsPackage from "../../packages/icons/package.json";
 import codeEditor from "../../packages/code-editor/package.json";
+import compatPackage from "../../packages/compat/package.json";
+import uikit_diagram from "../assets/uikit_diagram.png";
 
 <Meta title="Introduction/Overview" />
 
@@ -16,9 +18,13 @@ As a part of the Product Design group, the **Design System** team is responsible
 
 The **UI Kit** applies those standards, creating and providing to the front-end developers & engineers a collection of **reusable React components** to build their applications, that guarantees the alignment with the Design System specifications. It will enable developers to use a consistent markup, styles, and behavior, both in prototype and production work.
 
+Here's a diagram of where the UI Kit sits regarding the Design System, Design Delivery and Engineering teams:
+
+<img src={uikit_diagram} alt="UI Kit organization" />
+
 ### The UI Kit structure
 
-The UI Kit can be used via the following **four packages**:
+The UI Kit can be used via the following **six packages**:
 
 <ul>
   <li>
@@ -42,8 +48,75 @@ The UI Kit can be used via the following **four packages**:
     (https://github.com/react-monaco-editor/react-monaco-editor) compliant with the Hitachi Vantara
     Design System Style guidelines.
   </li>
+  <li>
+    <b>Compat</b> - v{compatPackage.version} - A compatibilituy package where components that are
+    being removed from the library temporarily reside to allow the teams that are using them to plan
+    their substitution. Not for all components but those that might require more time to be replaced
+    and would cause more disruption to the teams' work.
+  </li>
 </ul>
 
-### Design System Version
+<br />
 
-As said, the **UI Kit** follows a specific Design System version, and all our Themes, Icons and components available in the Core package where validated against. Currently the **UI Kit** follows the **Design System Version 3.2.1**. For more details, please consult the <a href="https://lumada-design.github.io/uikit/master/?path=/docs/get-started-component-list--page">list of components</a> for a more detail view.
+## Components, Widgets and Templates
+
+While the UI Kit is a component library, we also provide Widgets and Templates. Here's a run down of what's what:
+
+<ul>
+  <li>
+    <b>Components:</b> UI Kit components are the building blocks for creating your apps. They
+    correspond (in most cases) to Design System patterns.
+  </li>
+  <li>
+    <b>Widgets:</b> UI Kit widgets usually correspond to Design System patters but sit a level above
+    the components. A pattern might result in an infinity of possible configurations for the
+    component. So much so that it would be impractical to develop a component that contemplated all
+    the possibilities. That's where widgets come in: we provide a set of widgets that the teams can
+    copy to their project and adapt as per their requirements.
+  </li>
+  <li>
+    <b>Templates:</b> UI Kit provides a list of templates with common use cases found along Hitachi
+    Vantara's portfolio to help teams accelerate development of their apps. You can find a list of
+    templates{" "}
+    <a
+      href="https://lumada-design.github.io/uikit/master/?path=/docs/templates-overview--page"
+      target="_blank"
+    >
+      here
+    </a>
+    .
+  </li>
+</ul>
+
+## Accessibility
+
+The **UI kit** follows the two most commonly encountered conformance guidelines for accessibility. They are:
+
+<ul>
+  <li>
+    <a href="https://www.w3.org/WAI/standards-guidelines/wcag/">WCAG</a> - Globally accepted
+    standard
+  </li>
+  <li>
+    <a href="https://www.section508.gov/">Section 508</a> - US federal agencies
+  </li>
+</ul>
+
+WCAG 2.0 has 3 levels of conformance; A, AA and AAA (in order of conformance). As meeting WCAG 2.0 level AA guidelines also meets the Section 508 standards, this is likely the standard that most organizations will want to target.
+
+Regarding the usage of the our components, the [WAI-ARIA authoring practices](https://www.w3.org/TR/wai-aria-practices/) provides valuable insight on how to make our components highly accessible.
+
+To make sure our developed components follow the recommendation in the WCAG 2.0 and Section 508 guidelines, we target our development and tests to meet these two standards. Since many of our components are custom built,
+there is always room for improvement or areas where the accessibility of a component can be improved. If there is any component where you think improvements can be made, please reach out to us.
+
+Even though we're focused on developing a component library that is compliant with these standards, the application in which the components are integrated into has the responsibility of ensuring that the individual components are configured correctly and that the integration of those components produce an accessible application.
+So it is very important to know that the **UI kit enables the development of standard compliant applications, nothing more**.
+
+## Community
+
+If you want to stay up to date on the development of UI Kit and the Design System or to reach out to the community, you can use these resources:
+
+- Chat with us in the [#ui-kit Hitachi Vantara](https://hitachivantara-eng.slack.com/messages/CFY74GK6G) Slack Engineering channel and keep an eye on the release announcments.
+- Take a look to our detailed [Releases Change Logs](https://github.com/lumada-design/hv-uikit-react/releases).
+- Dive into our issues in the [github](https://github.com/lumada-design/hv-uikit-react/issues) repository.
+- Discover the [Design System](https://hitachivantara.sharepoint.com/sites/DesignSystem/UI%20KIT/Home.aspx) resources.
