feat(details-page): add details page to templates

--- a/doc/Templates/Templates.stories.mdx
+++ b/doc/Templates/Templates.stories.mdx
@@ -29,6 +29,13 @@ The UI Kit templates correspond to Design System patterns that consist on the co
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/AssetInventory"
     />
     <TemplateItem
+      kind="Templates/Details Page"
+      story="Main"
+      image={asset_inventory}
+      title="Details Page"
+      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsPage"
+    />
+    <TemplateItem
       kind="Templates/Kpis List"
       story="Main"
       image={kpis_list}
