docs: global contents review

--- a/doc/Forms/Forms.stories.mdx
+++ b/doc/Forms/Forms.stories.mdx
@@ -3,7 +3,7 @@ import Formik from "./Formik";
 import ReactHookForm from "./ReactHookForm";
 import ReactForm from "./ReactForm";
 
-<Meta title="How to Guides/Forms/Main" />
+<Meta title="Guides/Forms/Main" />
 
 # Forms
 
