--- a/doc/Guides/Styling.stories.mdx
+++ b/doc/Guides/Styling.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="How to Guides/Styling" />
+<Meta title="Guides/Styling" />
 
 # Styling
 
