--- a/doc/Theme/Icons/Library.stories.mdx
+++ b/doc/Theme/Icons/Library.stories.mdx
@@ -7,7 +7,7 @@ import { MaturityStatus } from "../../../.storybook/blocks/MaturityStatus";
 import componentDefinitions from "../versions";
 
 <Meta
-  title="Theming/Icons/Library"
+  title="Theme/Icons/Library"
   parameters={{
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
