--- a/doc/Theme/Typography/Typography.stories.mdx
+++ b/doc/Theme/Typography/Typography.stories.mdx
@@ -5,10 +5,10 @@ import { PopUp } from "@hitachivantara/uikit-react-icons";
 
 import Typography from "./Typography";
 import { MaturityStatus } from "../../../.storybook/blocks/MaturityStatus";
-import componentDefinitions from "../../Concepts/versions";
+import componentDefinitions from "../../Theme/versions";
 
 <Meta
-  title="Theming/Typography"
+  title="Theme/Typography"
   parameters={{
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
