--- a/doc/Introduction/Community/ReleaseSchedule.stories.mdx
+++ b/doc/Introduction/Community/ReleaseSchedule.stories.mdx
@@ -6,8 +6,6 @@ import { Meta } from "@storybook/addon-docs";
 
 We want to make sure our release schedule is clear to everyone. We are aware of the needs of external teams to not be blocked by our releases, for instance, a bug fix or a component being available on our lab (incubation) section.
 
-The following points explain our strategies to make sure this is possible.
-
 <br />
 
 ## Versions
@@ -23,13 +21,11 @@ We follow the [Semantic Versioning Guidelines](https://semver.org/). This releas
 
 ## Scheduling
 
-We trigger a release build of all our active branches (as we stand, 2.x and master) every day. This means that all code merged during that day will be validated against our tests and a new release will be made public.
+We trigger a release build of all our active branches every day. This means that all code merged during that day will be validated against our tests and a new release will be made public.
 The release number will be automatically calculated, based on the commits pushed that day. In case nothing is changed, no release will happen.
 
 We know releasing something every sprint, mainly when working on a major, might not be possible. But even for those, we commit to release an preview build (alpha, beta or rc) for those who want to try it.
 
 Every release changelogs will be available in the [github releases section](https://github.com/lumada-design/hv-uikit-react/releases) and our [documentation](https://lumada-design.github.io/hv-uikit-react/) updated.
-
-Majors are going to be released in a 12 month window at max, and may include breaking changes. We wil always announce it 2 or 3 months ahead, so teams consuming uikit can properly plan.
 
 Along with this information, we will always provide preview builds whenever we feel we have a good subset of things for teams to try out. And as always, feedback is very very welcome.
