--- a/doc/Theme/Colors.stories.mdx
+++ b/doc/Theme/Colors.stories.mdx
@@ -3,10 +3,10 @@ import Colors from "./Colors";
 import PaletteCustomization from "./PaletteCustomization";
 import { MaturityStatus } from "../../.storybook/blocks/MaturityStatus";
 
-import componentDefinitions from "../../doc/Concepts/versions";
+import componentDefinitions from "../../doc/Theme/versions";
 
 <Meta
-  title="Theming/Colors"
+  title="Theme/Colors"
   parameters={{
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
