refactor: templates review

--- a/doc/Templates/Templates.stories.mdx
+++ b/doc/Templates/Templates.stories.mdx
@@ -1,7 +1,8 @@
 import { Meta } from "@storybook/addon-docs";
 import asset_inventory from "../assets/asset_inventory.png";
-import kpis_list from "../assets/kpis_list.png";
+import details_page from "../assets/details_page.png";
 import form from "../assets/form.png";
+import list_view from "../assets/list_view.png";
 
 import LinkTo from "@storybook/addon-links/react";
 import TemplateItem from "./TemplatesTable/TemplateItem";
@@ -31,16 +32,16 @@ The UI Kit templates correspond to Design System patterns that consist on the co
     <TemplateItem
       kind="Templates/Details Page"
       story="Main"
-      image={asset_inventory}
+      image={details_page}
       title="Details Page"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsPage"
     />
     <TemplateItem
-      kind="Templates/Kpis List"
+      kind="Templates/List View"
       story="Main"
-      image={kpis_list}
-      title="Kpis List"
-      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/KpisList"
+      image={list_view}
+      title="List View"
+      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/ListView"
     />
     <TemplateItem
       kind="Templates/Form"
