--- a/doc/Guides/Styling/CssBaseline.stories.mdx
+++ b/doc/Guides/Styling/CssBaseline.stories.mdx
@@ -3,7 +3,7 @@ import LinkTo from "@storybook/addon-links/react";
 import { HvAvatar } from "@hitachivantara/uikit-react-core";
 import { Caution } from "@hitachivantara/uikit-react-icons";
 
-<Meta title="Theme/CSS Baseline" />
+<Meta title="Guides/Styling/CSS Baseline" />
 
 # CSS Baseline
 
