--- a/doc/Foundation/Icons/Library.stories.mdx
+++ b/doc/Foundation/Icons/Library.stories.mdx
@@ -4,10 +4,10 @@ import { ActualSize, FemaleRunning } from "@hitachivantara/uikit-react-icons";
 import * as iconComponentList from "@hitachivantara/uikit-react-icons/dist/icons";
 import * as iconPictogramComponentList from "@hitachivantara/uikit-react-icons/dist/pictograms";
 import { MaturityStatus } from "../../../.storybook/blocks/MaturityStatus";
-import componentDefinitions from "../versions";
+import componentDefinitions from "../../versions";
 
 <Meta
-  title="Theme/Icons/Library"
+  title="Foundation/Icons"
   parameters={{
     dsVersion: componentDefinitions.dsVersion.v3,
   }}
@@ -36,7 +36,7 @@ This will be the result:
 </Preview>
 
 <Preview>
-  <Story name="Icons">
+  <Story name="Main">
     <IconLibrary icons={iconComponentList} />
   </Story>
 </Preview>
