--- a/doc/Overview/Changelogs/CodeEditor.stories.mdx
+++ b/doc/Overview/Changelogs/CodeEditor.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/code-editor/CHANGELOG.md";
 
-<Meta title="Introduction/Change Log/Code Editor" />
+<Meta title="Overview/Change Logs/Code Editor" />
 
 <Description>{Changelog}</Description>
