--- a/doc/Overview/Changelogs/Core.stories.mdx
+++ b/doc/Overview/Changelogs/Core.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/core/CHANGELOG.md";
 
-<Meta title="Introduction/Change Log/Core" />
+<Meta title="Overview/Change Logs/Core" />
 
 <Description>{Changelog}</Description>
