--- a/doc/Overview/Changelogs/Lab.stories.mdx
+++ b/doc/Overview/Changelogs/Lab.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/lab/CHANGELOG.md";
 
-<Meta title="Introduction/Change Log/Lab" />
+<Meta title="Overview/Change Logs/Lab" />
 
 <Description>{Changelog}</Description>
