--- a/doc/Overview/Changelogs/Themes.stories.mdx
+++ b/doc/Overview/Changelogs/Themes.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
 import Changelog from "../../../packages/themes/CHANGELOG.md";
 
-<Meta title="Introduction/Change Log/Themes" />
+<Meta title="Overview/Change Logs/Themes" />
 
 <Description>{Changelog}</Description>
