--- a/doc/Overview/Community/ReleaseSchedule.stories.mdx
+++ b/doc/Overview/Community/ReleaseSchedule.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-<Meta title="Introduction/Community/Releases" />
+<Meta title="Overview/Community/Releases" />
 
 # Releases
 
@@ -24,8 +24,6 @@ We follow the [Semantic Versioning Guidelines](https://semver.org/). This releas
 We trigger a release build of all our active branches every day. This means that all code merged during that day will be validated against our tests and a new release will be made public.
 The release number will be automatically calculated, based on the commits pushed that day. In case nothing is changed, no release will happen.
 
-We know releasing something every sprint, mainly when working on a major, might not be possible. But even for those, we commit to release an preview build (alpha, beta or rc) for those who want to try it.
+When working on a major version, preview builds (alpha, beta or rc) should be available whenever we feel we have a good subset of things for teams to try out.
 
 Every release changelogs will be available in the [github releases section](https://github.com/lumada-design/hv-uikit-react/releases) and our [documentation](https://lumada-design.github.io/hv-uikit-react/) updated.
-
-Along with this information, we will always provide preview builds whenever we feel we have a good subset of things for teams to try out. And as always, feedback is very very welcome.
