--- a/doc/Overview/Migration/MigrationV2x.stories.mdx
+++ b/doc/Overview/Migration/MigrationV2x.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
-import migration from "../../MIGRATION_v3x.md";
+import migration from "../../../MIGRATION_v2x.md";
 
-<Meta title="Introduction/Migration/From V2.x" />
+<Meta title="Overview/Migration/From V1.x" />
 
 <Description>{migration}</Description>
