--- a/doc/Overview/Migration/MigrationV4x.stories.mdx
+++ b/doc/Overview/Migration/MigrationV4x.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Description } from "@storybook/addon-docs";
-import migration from "../../MIGRATION_v4x.md";
+import migration from "../../../MIGRATION_v4x.md";
 
-<Meta title="Introduction/Migration/From V3.x" />
+<Meta title="Overview/Migration/From V3.x" />
 
 <Description>{migration}</Description>
