feat(Spacing): review and add spacing capabilities
feat(Spacing): review and add spacing capabilities

--- a/docs/theme/Theming/Theming.stories.mdx
+++ b/docs/theme/Theming/Theming.stories.mdx
@@ -332,10 +332,10 @@ import { HvButton, theme } from "@hitachivantara/uikit-react-core";
 
 export const Spacing = () => {
   const StyledContainer = styled("div")({
-    marginTop: theme.spacing(2),
+    marginTop: theme.space.sm,
 
     "& > *:not(:last-child)": {
-      marginRight: theme.spacing(3),
+      marginRight: theme.space.md,
     },
   });
 
