--- a/docs/theme/Colors/Colors.stories.mdx
+++ b/docs/theme/Colors/Colors.stories.mdx
@@ -1,5 +1,7 @@
 import { Meta, Story, Preview } from "@storybook/addon-docs";
 import Colors from "./Colors";
+import { HvTypography } from "@hitachivantara/uikit-react-core";
+import { theme } from "@hitachivantara/uikit-styles";
 
 <Meta title="Theme/Colors" />
 
@@ -11,9 +13,18 @@ It produces positive and minimalistic work environments, leveraging an array of 
 
 Example of a color variable:
 
-```
-theme.colors.atmo5
-```
+<pre
+  style={{
+    border: `1px solid ${theme.colors.atmo4}`,
+    backgroundColor: theme.colors.atmo1,
+    padding: 20,
+    borderRadius: theme.radii.sm,
+    boxShadow: theme.shadows.sm,
+    fontSize: 12,
+  }}
+>
+  theme.colors.atmo5
+</pre>
 
 <Story name="Main">
   <Colors />
