chore: docs organization

--- a/.storybook/docs/templates/Templates.stories.mdx
+++ b/.storybook/docs/templates/Templates.stories.mdx
@@ -29,15 +29,13 @@ The UI Kit templates correspond to Design System patterns that consist on the co
       image={asset_inventory}
       title="Asset Inventory"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/AssetInventory"
-      disabled
     />
     <TemplateItem
-      kind="Templates/Details Page"
+      kind="Templates/Details View"
       story="Main"
       image={details_page}
-      title="Details Page"
-      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsPage"
-      disabled
+      title="Details View"
+      code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsView"
     />
     <TemplateItem
       kind="Templates/List View"
@@ -45,7 +43,6 @@ The UI Kit templates correspond to Design System patterns that consist on the co
       image={list_view}
       title="List View"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/ListView"
-      disabled
     />
     <TemplateItem
       kind="Templates/Form"
