chore: tests and styling fixes

--- a/.storybook/docs/templates/Templates.stories.mdx
+++ b/.storybook/docs/templates/Templates.stories.mdx
@@ -4,7 +4,7 @@ import LinkTo from "@storybook/addon-links/react";
 import TemplateItem from "./TemplateItem";
 
 import asset_inventory from "../assets/asset_inventory.png";
-import details_page from "../assets/details_page.png";
+import details_view from "../assets/details_view.png";
 import form from "../assets/form.png";
 import list_view from "../assets/list_view.png";
 
@@ -33,7 +33,7 @@ The UI Kit templates correspond to Design System patterns that consist on the co
     <TemplateItem
       kind="Templates/Details View"
       story="Main"
-      image={details_page}
+      image={details_view}
       title="Details View"
       code="https://github.com/lumada-design/hv-uikit-react/tree/master/templates/DetailsView"
     />
